2009-01-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: added expat as
	dependency of fontconfig (it could also use libxml2 but fontconfig
	configure script prefers expat).  (closes: #565994)

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-suites-2.26.modules: Shuffle glib, gtk+ deps
	around a little bit.

2008-12-31  Sebastian Pölsterl  <sebp@svn.gnome.org>

	* modulesets/gnome-2.26.modules: dvb-daemon no longer
	depends on gconf

2008-12-28  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.26.modules: add DeviceKit, DeviceKit-power
	and DeviceKit-disks modules (need external unmanaged deps, see
	comments to modules definitions)

2008-12-26  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py: display updated bootstrap modules when
	checking the bootstrap moduleset changes.  (closes: #565355)

2008-12-23  Paolo Borelli  <pborelli@katamail.com>

	* jhbuild/commands/base.py:
	* doc/C/jhbuild.xml:
	Add a "--start-at" option to the list command and document it.

2008-12-23  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules, patches/python-2.5.2-lib64.patch:
	reenabled python patch, after the removal of a Mandriva specific
	part.

2008-12-22  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: updated GTK+ to use trunk.

2008-12-22  Andy Wingo  <wingo@pobox.com>

	* jhbuild/commands/snapshot.py: New file, implements the new
	command, "jhbuild snapshot". (closes: #564873)

	* jhbuild/utils/sxml.py: New helper lib for xml serialization.

	* jhbuild/versioncontrol/svn.py (SubversionRepository.to_sxml)
	(SubversionBranch.to_sxml):
	* jhbuild/versioncontrol/git.py (GitRepository.to_sxml)
	(GitBranch.to_sxml):
	* jhbuild/versioncontrol/tarball.py (TarballRepository.to_sxml)
	(TarballBranch.to_sxml):
	* jhbuild/versioncontrol/__init__.py (Repository.to_sxml)
	(Branch.to_sxml):
	* jhbuild/versioncontrol/cvs.py (CVSRepository.to_sxml)