@@ -1,5 +1,11 @@
 2009-01-03  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/base.py: display an informative message when running
+	`jhbuild build $module' while $module is in the ignore list.
+	(closes: #564241)
+
+2009-01-03  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-external-deps-2.26.modules: added expat as
 	dependency of fontconfig (it could also use libxml2 but fontconfig
 	configure script prefers expat).  (closes: #565994)
